# credit-spread-tracer

./: .gitignore  CLEANUP_LOG.md  FINAL_SUMMARY.md  HANDOFF.md  HMM_MICROSTRUCTURE_SUMMARY.md  HMM_RESEARCH_SUMMARY.md  HMM_THREE_STATE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INVERTED_STRATEGY_FINDINGS.md  README.md  STRESS_TRADING_FINDINGS.md  main.py  pyproject.toml  requirements.txt
docs/: STANDARDIZATION_NOTE.md
notebooks/: 01_eda.ipynb  02_clustering_eda.ipynb  02_hmm_validation_results.ipynb  03_mean_reversion_analysis.ipynb  03_regime_analysis.ipynb  03_walk_forward_backtest.ipynb  04_walk_forward_cv_backtest.ipynb  05_backtest_no_costs.ipynb  06_simple_threshold_tests.ipynb  07_test_2025.ipynb  08_final_analysis_2015_2019.ipynb  09_stress_only_trading.ipynb  10_fixed_grid_search_and_inverted.ipynb  11_stress_trading_risk_adjusted.ipynb  12_hmm_regime_validation.ipynb  13_hmm_three_state_validation.ipynb  14_hmm_microstructure_regimes.ipynb  15_regime_conditional_backtest.ipynb  16_predictive_models.ipynb  17_transition_trading.ipynb  INDEX.md  NOTEBOOK_README.md
notebooks/archive_notebooks/: 03_walk_forward_backtest.ipynb  04_walk_forward_cv_backtest.ipynb  05_backtest_no_costs.ipynb  06_simple_threshold_tests.ipynb  07_test_2025.ipynb  08_final_analysis_2015_2019.ipynb  09_stress_only_trading.ipynb  10_fixed_grid_search_and_inverted.ipynb  11_stress_trading_risk_adjusted.ipynb  12_hmm_regime_validation.ipynb  13_hmm_three_state_validation.ipynb  (+4 more)
scripts/: run_normal_bootstrap.py  run_pipeline_hmm.py  run_smoke.py
src/: __init__.py  config.py
(+16 files in other folders)
