[project]
name = "credit-spread-tracer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hmmlearn>=0.3.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy<2,>=1.25",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "pyflakes>=3.4.0",
    "pykalman>=0.11.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
]
